--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 background-color: none;
                 color: rgba(0,0,0,0.8);
                 z-index: 10;
-                font-family:'Major Mono Display', monospace;
+                font-family:'Dosis', sans-serif;
             }
             #main-box{
                 position: absolute;
