--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div id='cover'></div>
             <div id='retry' onclick="fxretry();setTimeout('window.location.reload()',500);this.style.animationName='gniob';document.getElementsByClassName('fa')[0].style.animationName='rotate';" ><i class="fa fa-repeat" ></i></div>
-            <div id='turn'>make a move</div>
+            <div id='turn'>You there!</div>
         </div>
         <script src="script.js" async></script>
     </body>
